@@ -1,3 +1,8 @@
+Sun Sep  3 12:23:18 AM CEST 2023
+    Prevent queueing of responses if connection is not currently in the
+    access handler callback (which was always not allowed per API spec,
+    but is now met with an appropriate error response). Fixes #7757. -CG
+
 Web 29 Mar 2023 20:56:00 CEST
     Bumped version as the hotfix was released based on the separate branch. -EG
 
